fix: suppress PageHeader rule on dashboards to prevent double border

--- a/app/dashboards/page.module.css
+++ b/app/dashboards/page.module.css
@@ -2,7 +2,3 @@
   display: flex;
   flex-direction: column;
 }
-
-.list > :first-child {
-  border-top: none;
-}
